<resources>
    <string name="app_name">PressureProject</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="create_account">Create Account</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="send_reset_password_link">Reset Password</string>
    <string name="no_account_yet_create_one">No account yet? Create one</string>
    <string name="forget_password">Forget Password?</string>

    <string name="upper_measure">Upper</string>
    <string name="lower_measure">Lower</string>
    <string name="Day">Day</string>
    <string name="Time">Time</string>
    <string name="create_measure">Create New Measure</string>

    <string name="Nav">Nav</string>
    <string name="Gallery">Gallery</string>
    <string name="Slide">Slide</string>
    <string name="Manage">Manage</string>
    <string name="navigation_drawer_open">nav Open</string>
    <string name="navigation_drawer_close">nav Close</string>

    <string name="apple_macbook_air_core_i5_5th_gen">Apple MacBook Air Core i5 5th Gen</string>
    <string name="_13_3_inch_256_gb">13.3 Inch</string>
    <string name="_4_7">4.7</string>
    <string name="inr_56990">INR 56990</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="message">Message</string>
    <string name="pressuremeasure">PressureMeasure</string>
    <string name="sugarmeasure">SugarMeasure</string>
    <string name="heartmeasure">HeartMeasure</string>
    <string name="hassan_ibrahim_com">hassan@ibrahim.com</string>
    <string name="hassan_ibrahim_fatooh_hassan">Hassan ibrahim Fatooh Hassan</string>
    <string name="pressure">Pressure</string>

</resources>
