<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_PressureMeasure"
            android:icon="@drawable/pressure"
            android:title="@string/pressuremeasure" />
        <item
            android:id="@+id/nav_SugarMeasure"
            android:icon="@drawable/sugar"
            android:title="@string/sugarmeasure" />
        <item
            android:id="@+id/nav_HeartMeasure"
            android:icon="@drawable/heart"
            android:title="@string/heartmeasure" />

    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/message"
                android:title="@string/message" />
            <item
                android:id="@+id/nav_Logout"
                android:icon="@drawable/logout"
                android:title="Logout" />
        </menu>
    </item>

</menu>

