<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="56dp"
        android:paddingRight="24dp">

        <ImageView
            android:layout_width="113dp"
            android:layout_height="72dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:src="@drawable/logo" />


        <!-- Upper Measure Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/upper_measure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/upper_measure"
                android:inputType="number"
                android:textSize="24sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Lower Measure Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/lower_measure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lower_measure"
                android:inputType="number"
                android:textSize="24sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Lower Measure Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/Day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Day"
                android:inputType="date"
                android:textSize="24sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <!-- Lower Measure Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/Time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Time"
                android:inputType="time"
                android:textSize="24sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <!-- Create New Measure Button -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_NewMeasure"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:onClick="CreateNewMeasure"
            android:padding="12dp"
            android:text="@string/create_measure" />


    </LinearLayout>

</ScrollView>